--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -24,7 +24,7 @@
         <div class="container-fluid page-body-wrapper full-page-wrapper">
           <div class="row w-100 m-0">
             <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
-                <div class="card col-lg-4 mx-auto">
+                <div class="card col-lg-4 mx-auto" style="border: solid 1px #2f89fc;">
                 <div class="card-body px-5 py-5">
                     <h3 class="card-title text-left mb-3">Inicio de sesión</h3>
                     <form>
@@ -44,15 +44,9 @@
                         <a href="#" class="forgot-pass">Olvide mi contraseña</a>
                     </div>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-primary btn-block enter-btn">Login</button>
+                        <button type="submit" class="btn btn-primary btn-block enter-btn">Acceder</button>
                     </div>
-                    <div class="d-flex">
-                        <button class="btn btn-facebook mr-2 col">
-                        <i class="mdi mdi-facebook"></i> Facebook </button>
-                        <button class="btn btn-google col">
-                        <i class="mdi mdi-google-plus"></i> Google plus </button>
-                    </div>
-                    <p class="sign-up">No tienes una cuenta?<a href="#"> Inicia sesión</a></p>
+                    <p class="sign-up">No tienes una cuenta?<a href="/register"> Inicia sesión</a></p>
                     </form>
                 </div>
                 </div>
