--- a/templates/register/register.html
+++ b/templates/register/register.html
@@ -1,75 +1,104 @@
-{% extends 'layouts.html' %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registrarse</title>
 
-{% block title %} Registro de usuarios {% endblock %}
-
-{% block css %} {% endblock %}
-
-{% block header %} {% endblock %}
-
-{% block content %}
-<div class="content-wrapper">
-    <div class="page-header">
-        <h3 class="page-title"> Formulario de registro </h3>
-        <nav aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Form</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Formulario de registro</li>
-          </ol>
-        </nav>
-    </div>
-    <div class="row">
-    <div class="col-md-12 grid-margin stretch-card">
-        <div class="card">
-          <div class="card-body">
-            <h2 class="card-title">Registrar usuario</h2>
-            <p class="card-description"> Registro de usuarios del sistema </p>
-            <form class="forms-sample">
-              <div class="form-group">
-                <label for="exampleInputName1">Nombre</label>
-                <input type="text" class="form-control" id="exampleInputName1" placeholder="Nombre">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail3">Email</label>
-                <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Email">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputPassword4">Clave</label>
-                <input type="password" class="form-control" id="exampleInputPassword4" placeholder="Clave">
-              </div>
-              <div class="form-group">
-                <label for="exampleSelectGender">Genero</label>
-                <select class="form-control" id="exampleSelectGender">
-                  <option>Masculino</option>
-                  <option>Femenino</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label>Subir imagen de perfil</label>
-                <input type="file" name="img[]" class="file-upload-default">
-                <div class="input-group col-xs-12">
-                  <input type="text" class="form-control file-upload-info" disabled placeholder="Subir imagen">
-                  <span class="input-group-append">
-                    <button class="file-upload-browse btn btn-primary" type="button">Subir</button>
-                  </span>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="exampleInputCity1">Ciudad</label>
-                <input type="text" class="form-control" id="exampleInputCity1" placeholder="Ciudad">
-              </div>
-              <div class="form-group">
-                <label for="exampleTextarea1">Descripcion</label>
-                <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary mr-2">Registrar</button>
-              <button class="btn btn-dark">Cancelar</button>
-            </form>
-          </div>
+     <!-- plugins:css -->
+     <link rel="stylesheet" href="{{ url_for('static', filename='css/plantilla/materialdesignicons.min.css')}}">
+     <link rel="stylesheet" href="{{ url_for('static', filename='css/plantilla/vendor.bundle.base.css')}}">
+     <!-- Plugin css for this page -->
+     <link rel="stylesheet" href="{{ url_for('static', filename='css/plantilla/jquery-jvectormap.css')}}">
+     <link rel="stylesheet" href="{{ url_for('static', filename='css/plantilla/flag-icon.min.css')}}">
+     <link rel="stylesheet" href="{{ url_for('static', filename='css/plantilla/owl.carousel.min.css')}}">
+     <link rel="stylesheet" href="{{ url_for('static', filename='css/plantilla/owl.theme.default.min.css')}}">
+     <!-- Layout styles -->
+     <link rel="stylesheet" href="{{ url_for('static', filename='css/plantilla/style.css')}}">
+     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.png')}}"/>
+     <!-- Google fonts icons -->
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+       rel="stylesheet">
+</head>
+<body>
+    <div class="content-wrapper">
+        <div class="page-header">
+            <h3 class="page-title"> Formulario de registro </h3>
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/">Iniciar Sesión</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Formulario de registro</li>
+              </ol>
+            </nav>
         </div>
+        <div class="row">
+            <div class="col-md-12 grid-margin stretch-card">
+                <div class="card">
+                  <div class="card-body">
+                    <h2 class="card-title">Registrar usuario</h2>
+                    <p class="card-description"> Registro de usuarios del sistema </p>
+                    <form class="forms-sample">
+                      <div class="form-group">
+                        <label for="exampleInputName1">Nombre</label>
+                        <input type="text" class="form-control" id="exampleInputName1" placeholder="Nombre">
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleInputEmail3">Email</label>
+                        <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Email">
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleInputPassword4">Clave</label>
+                        <input type="password" class="form-control" id="exampleInputPassword4" placeholder="Clave">
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleSelectGender">Genero</label>
+                        <select class="form-control" id="exampleSelectGender">
+                          <option>Masculino</option>
+                          <option>Femenino</option>
+                        </select>
+                      </div>
+                      <div class="form-group">
+                        <label>Subir imagen de perfil</label>
+                        <input type="file" name="img[]" class="file-upload-default">
+                        <div class="input-group col-xs-12">
+                          <input type="text" class="form-control file-upload-info" disabled placeholder="Subir imagen">
+                          <span class="input-group-append">
+                            <button class="file-upload-browse btn btn-primary" type="button">Subir</button>
+                          </span>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleInputCity1">Ciudad</label>
+                        <input type="text" class="form-control" id="exampleInputCity1" placeholder="Ciudad">
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleTextarea1">Descripcion</label>
+                        <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
+                      </div>
+                      <button type="submit" class="btn btn-primary mr-2">Registrar</button>
+                      <button class="btn btn-dark">Cancelar</button>
+                    </form>
+                  </div>
+                </div>
+            </div>
+            </div>
     </div>
-    </div>
-</div>
-
-{% endblock %}
-
-{% block scripts %} {% endblock %}
+</body>
+<!-- SCRIPTS -->
+<!-- plugins:js -->
+<script src="{{ url_for('static', filename='plugin/js/vendor.bundle.base.js')}}"></script>
+<!-- Plugin js for this page -->
+<script src="{{ url_for('static', filename='plugin/chart.js/Chart.min.js')}}"></script>
+<script src="{{ url_for('static', filename='plugin/progressbar.js/progressbar.min.js')}}"></script>
+<script src="{{ url_for('static', filename='plugin/jvectormap/jquery-jvectormap.min.js')}}"></script>
+<script src="{{ url_for('static', filename='plugin/jvectormap/jquery-jvectormap-world-mill-en.js')}}"></script>
+<script src="{{ url_for('static', filename='plugin/owl-carousel-2/owl.carousel.min.js')}}"></script>
+<!-- inject:js -->
+<script src="{{ url_for('static', filename='js/plantilla/off-canvas.js')}}"></script>
+<script src="{{ url_for('static', filename='js/plantilla/hoverable-collapse.js')}}"></script>
+<script src="{{ url_for('static', filename='js/plantilla/misc.js')}}"></script>
+<script src="{{ url_for('static', filename='js/plantilla/settings.js')}}"></script>
+<script src="{{ url_for('static', filename='js/plantilla/todolist.js')}}"></script>
+<!-- Custom js for this page -->
+<script src="{{ url_for('static', filename='js/plantilla/dashboard.js')}}"></script>
+</html>
